--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$<span id="subTotal">1,278</span></h5>
+                        <h5>$<span id="subTotal">1278</span></h5>
                         <h5>$<span id="tax">0</span></h5>
-                        <h5>$<span id="total">1,278</span></h5>
+                        <h5>$<span id="total">1278</span></h5>
                      </div>
                   </div>
                </div>
@@ -78,7 +78,8 @@
       </div>
    </section>
 
-   <script src="script.js">   </script>
+   <script src="script.js">   
+</script>
 
 </body>
 </html>
